# MMs_vision_project

./: README.md
abb_experimental/abb_irb120_moveit_config/launch/: moveit.rviz
abb_experimental/abb_irb120_support/urdf/: irb120_3_58_macro.xacro  irb120t_3_58.xacro  irb120t_3_58_macro.xacro
abb_vision_project/: README.md
abb_vision_project/irb120_gripper_pkg/: CMakeLists.txt  package.xml
abb_vision_project/irb120_gripper_pkg/config/: urdf.rviz
abb_vision_project/irb120_gripper_pkg/launch/: load_robot_with_gripper.launch  test_robot_with_gripper.launch
abb_vision_project/irb120_gripper_pkg/meshes/: simplified_complete_structure.stl  simplified_complete_structure_v2.stl  struttura_no_camera.stl  struttura_no_camera_m.stl
abb_vision_project/irb120_gripper_pkg/urdf/: irb120_with_robotiq_STAR.xacro
abb_vision_project/irb120_robotiq_moveit_config/: CMakeLists.txt  package.xml
abb_vision_project/motion_planning/: CMakeLists.txt  package.xml
abb_vision_project/pcl_processing/: CMakeLists.txt  package.xml
abb_vision_project/pcl_processing/src/: example.cpp  (+8 more)
abb_vision_project/tf_test/: CMakeLists.txt  package.xml
abb_vision_project/zivid_capture/: CMakeLists.txt  package.xml
abb_vision_project/zivid_capture/launch/: capture_no_rviz.launch  processing.launch  sample_no_rviz.launch
abb_vision_project/zivid_capture/log/: CaptureTimeDataLog.txt
abb_vision_project/zivid_capture/src/: capture_assistant.cpp  hello_cpp_f.cpp
robotiq_2finger_grippers/robotiq_2f_gripper_control/: CMakeLists.txt  package.xml
robotiq_85_description/: package.xml
robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro
(+50 files in other folders)
